# crypto-compare

./: .pre-commit-config.yaml  LICENSE  README.md  coinComparisonTool.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: coinComparisonTool-checkpoint.ipynb
config/: default.ini
notebooks/: crypto-compare.ipynb
scripts/: crypto-compare.py
src/: main.py
src/utils/: pdf.py
